2001-08-12  Radek Doulik  <rodo@ximian.com>

	* used next part of UI designed by Anna, removed custom
	keybindings functionality (before it could be rewritten to use XML
	to store keybindings and allow create custom keybindings based on
	predefined ones - probably post-1.0 :(

2001-08-07  Radek Doulik  <rodo@ximian.com>

	* main.c (picker_clicked): new signal handler which sets filter
	for font selection dialog to avoid selecting proportional font for
	mono spaced one and vice versa
	(setup): use picker_clicked

2001-07-26  Chema Celorio  <chema@celorio.com>

	* gnome-bindings-prop.c (init): set the usize of
	the clists since the new control center is not embeding
	capplets but displaying them in a window

2001-07-25  Radek Doulik  <rodo@ximian.com>

	* Makefile.am: generate .desktop, substitute ICONSDIR

	* moved html-viewer.png to ../art/

2001-07-25  Jakub Steiner <jimmac@ximian.com>

	* html-viewer.png: icon for the new gnomecc. I tried to modify
	  the gtkhtml-properties.desktop and Makefile.am files, but since
	  it didn't quite work, I'll leave that to someone who has a
	  clue.

2001-07-13  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-capplet.glade: rename the Magic Links checkbox.

	* Makefile.am (glade_DATA): copy the .desktop to the new control
	centers capplet directory as well (from Richard Hestilow
	<hestgray@hotmail.com>)

2001-06-06  gtkhtml@thewrittenword.com

	* gnome-bindings-prop.c (init):
	Sun C complains about:
	gchar *cols1 [2] = {_("Key"), _("Command")};

2001-05-29  Radek Doulik  <rodo@ximian.com>

	* Makefile.am (EXTRA_DIST): remove gtkhtml-capplet.glade.h

2001-05-07  Larry Ewing  <lewing@ximian.com>

	* gtkhtml-capplet.glade: fix spelling of keyboard.

2001-04-01  Fatih Demir <kabalak@gtranslator.org>

	* .cvsignore: Added "gtkhtml-capplet.glade.h" to the
		ignores.

2001-02-19  Yukihiro Nakai  <nakai@gnome.gr.jp>

	* .desktop: Add Japanese trasnlation.
	* Fix Commento -> Comment
